class Article {
  final int id;
  final String name;

  const Article({
    this.id = 0,
    this.name = "",
  });
}
